--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="index.html" class="logo">
                 Logo
             </a>
-            <ul id="nav-menu">
+            <ul id="nav-menu" class="light-font">
                 <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">SKILLS & TOOLS</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">PROJECTS</a></li>
