Change resume button styling

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     and craft beautiful robust Web Apps.
                 </p>
                 <div class="hero__nav-menu">
-                    <button id="resume-btn" class="dark-font">RESUME</button>
+                    <button id="resume-btn" class="light-font">Resumé</button>
                     <a class="hero__link"><img src="images/github-icon-link.svg" /></a>
                     <a class="hero__link"><img src="images/instagram-icon.svg"/></a>
                     <a class="hero__link"><img src="images/mail-icon.svg"/></a>
