Add link to project section

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="projects-container">
             <article class="project-item">
                 <div class="project-item__img-container">
-                    <img src="images/cupkayz-project.png" alt="Cup Kayz" />
+                    <a href="https://californiadev.github.io/CupkayzV2.0/"><img src="images/cupkayz-project.png" alt="Cup Kayz" /></a>
                 </div>
                 <div class="project-item-description">
                     <h3 class="light-font">Cup Kayz</h3>
@@ -147,6 +147,10 @@
                         <li>Uses autocomplete feature when entering address for quicker service.</li>
                         <li>Shopping cart is fun and interactive. Can change remove / add items within the cart.</li>
                     </ul>
+                    <div class="project-links">
+                        <a href=" https://californiadev.github.io/CupkayzV2.0/" target="_blank">LIVE</a>
+                        <a href="https://github.com/CaliforniaDev/CupkayzV2.0" target="_blank">REPO</a>
+                    </div>
                     
 
                 </div>
