--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
                 <img class="profile-img" src="images/profile.JPG" />
             </div>
             <div class="hero__content">
-                <p>HI THERE! I'M</p>
+                <p>👋🏽 HI THERE! I'M</p>
                 <h2><span id="leo">LEO</span> DANIELS</h2>
                 <p>A <span class="blue-font">Front-end Developer</span>
-                    that can create interactive prototypes. From that craft beautiful robust Web Apps.
+                    that can create wonderful, interactive applications on the web. I have an ardent desire to craft high quality web apps and
+                    exceptional user experiences. I possess the ability to learn new technologies rapidly due to my love of coffee. ☕ 
                 </p>
                 <div class="hero__nav-menu">
                     <a href="./resume.pdf" target="_blank" id="resume-btn" class="light-font">Resumé</a>
@@ -80,8 +81,9 @@
                             <img src="images/pen-tool.svg" />
                         </figure>
                         <h4>UI / UX Designer</h4>
-                        <p>I created interactive prototypes to insure the best user
-                            experience possible.</p>
+                        <p>During the inital design process. I create both a low fidelity wireframe, then an
+                             interactive hi-fidelity prototype using Adobe XD. Each design goes through exstensive user testing to ensure the 
+                            best possible user experience.</p>
                     </div>
                 </div>
                 <div class="skills__col">
@@ -90,8 +92,11 @@
                             <img src="images/desktop-icon.svg" />
                         </figure>
                         <h4>Front-end Developer</h4>
-                        <p>After the design process, I enjoy to write clean responsive
-                            code that renders well on a variety of devices and windows. </p>
+                        <p>After the client decides on a design, the next process is coming up with the software architecture
+                            that best suits the project. I enjoy to write clean responsive
+                            code that renders well on a variety of devices and windows. Each line of code is thoughtfully written
+                            to increase performance and maintainability.
+                         </p>
                     </div>
 
                 </div>
