--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p>👋🏽 HI THERE! I'M</p>
                 <h2><span id="leo">LEO</span> DANIELS</h2>
                 <p>A <span class="blue-font">Front-end Developer</span>
-                    that can create wonderful, interactive applications on the web. I have an ardent desire to craft high quality web apps and
+                    that can create powerful, interactive applications on the web. I have an ardent desire to craft high quality web apps and
                     exceptional user experiences. I possess the ability to learn new technologies rapidly due to my love of coffee. ☕ 
                 </p>
                 <div class="hero__nav-menu">
