--- a/project-quote.html
+++ b/project-quote.html
@@ -14,7 +14,7 @@
 
 <body>
   <nav id="top-nav">
-    <a href="index.php" class="logo">
+    <a href="index.html" class="logo">
       <img class="logo-icon" src="images/character.svg" alt="californiaDev Logo" />
       <img class="logo-wordmark" src="images/logo-wordmark.svg" alt="californiaDev" />
     </a>
